--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRE=7d
 
 # CORS Configuration
-CORS_ORIGIN=https://your-frontend-url.onrender.com
+CORS_ORIGIN=https://home-lesson-management-system.onrender.com
